started work on implementing jwlgl